# ctag-tbd

./: .gitmodules
components/ctagSoundProcessor/: ctagSoundProcessorDrumRack.cpp  ctagSoundProcessorDrumRack.hpp
components/ctagSoundProcessor/mifx/: reverb2.h
main/: IOCapabilities.hpp
spiffs_image/data/sp/: mp-DrumRack.jsn  mui-DrumRack.jsn
tapp/: CMakeLists.txt  Serial.h  WebServer.cpp  cmake.txt  main.cpp  readme.md  testlcpp.cpp
tapp/FileBrowser/: ImGuiFileBrowser.cpp  ImGuiFileBrowser.h
tapp/scripts/: esptool_erasetbd.bat  esptool_flashsample.bat  esptool_flashtbd.bat
