cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(tapp)

set(LIBSER_SRC libserialport/serialport.c libserialport/timing.c)
if(WIN32)
    set(LIBSER_SRC ${LIBSER_SRC} libserialport/windows.c.c)
elseif(APPLE)
    set(LIBSER_SRC ${LIBSER_SRC} libserialport/macosx.c)
else()
    set(LIBSER_SRC ${LIBSER_SRC} libserialport/linux.c)
endif()
set(LIBSER_HDR libserialport/libserialport.h)
add_library(libserialport STATIC ${LIBSER_SRC})
target_compile_definitions(libserialport PRIVATE SP_PRIV=)
target_include_directories(libserialport PRIVATE ${LIBSER_HDR})
if(APPLE)
    target_link_libraries(libserialport PRIVATE "-framework IOKit" "-framework CoreFoundation")
endif()

add_executable(testlserial testlcpp.cpp)
target_include_directories(testlserial PRIVATE libserialport)
target_link_libraries(testlserial PRIVATE libserialport)